# pepper-dialog

./: CMakeLists.txt  filespepper.txt  installer.sh  installer.sh~  package.xml  readme
CMU/cnodes/: continuous.c
CMU/sphinx-source/: Makefile  config.status  libtool  sphinxbase.pc
CMU/sphinx-source/doc/: Makefile  doxyfile
CMU/sphinx-source/include/: Makefile  config.h
CMU/sphinx-source/include/sphinxbase/: Makefile
CMU/sphinx-source/src/: Makefile
CMU/sphinx-source/src/libsphinxad/: Makefile  ad_pulse.lo  libsphinxad.la
CMU/sphinx-source/src/libsphinxad/.deps/: ad_pulse.Plo
CMU/sphinx-source/src/libsphinxad/.libs/: libsphinxad.lai  libsphinxad.so.3.0.0  libsphinxad.so.3.0.0T
CMU/sphinx-source/src/libsphinxbase/: Makefile  libsphinxbase.la
CMU/sphinx-source/src/libsphinxbase/.libs/: libsphinxbase.lai  libsphinxbase.so.3.0.0
CMU/sphinx-source/src/libsphinxbase/fe/: Makefile  fe_interface.lo  fe_noise.lo  fe_prespch_buf.lo  fe_sigproc.lo  fe_warp.lo  fe_warp_affine.lo  fe_warp_inverse_linear.lo  fe_warp_piecewise_linear.lo  fixlog.lo  libsphinxfe.la  yin.lo
CMU/sphinx-source/src/libsphinxbase/feat/: Makefile  agc.lo  cmn.lo  cmn_live.lo  feat.lo  lda.lo  libsphinxfeat.la
CMU/sphinx-source/src/libsphinxbase/lm/: Makefile  fsg_model.lo  jsgf.lo  jsgf_parser.lo  jsgf_scanner.lo  libsphinxlm.la  lm_trie.lo  lm_trie_quant.lo  ngram_model.lo  ngram_model_set.lo  ngram_model_trie.lo  ngrams_raw.lo
CMU/sphinx-source/src/libsphinxbase/util/: Makefile  bio.lo  bitarr.lo  bitvec.lo  case.lo  ckd_alloc.lo  cmd_ln.lo  dtoa.lo  err.lo  filename.lo  genrand.lo  glist.lo  hash_table.lo  heap.lo  libsphinxutil.la  listelem_alloc.lo  logmath.lo  mmio.lo  pio.lo  priority_queue.lo  profile.lo  sbthread.lo  strfuncs.lo
CMU/sphinx-source/src/sphinx_adtools/: Makefile  sphinx_cont_seg  sphinx_pitch
CMU/sphinx-source/src/sphinx_adtools/.deps/: cont_seg.Po  sphinx_pitch.Po
CMU/sphinx-source/src/sphinx_adtools/.libs/: sphinx_cont_seg  sphinx_pitch
CMU/sphinx-source/src/sphinx_cepview/: Makefile  sphinx_cepview
CMU/sphinx-source/src/sphinx_cepview/.deps/: main_cepview.Po
CMU/sphinx-source/src/sphinx_cepview/.libs/: sphinx_cepview
CMU/sphinx-source/src/sphinx_fe/: Makefile  sphinx_fe
CMU/sphinx-source/src/sphinx_fe/.deps/: sphinx_fe.Po
CMU/sphinx-source/src/sphinx_fe/.libs/: sphinx_fe
CMU/sphinx-source/src/sphinx_jsgf2fsg/: Makefile  sphinx_jsgf2fsg
CMU/sphinx-source/src/sphinx_jsgf2fsg/.deps/: main.Po
CMU/sphinx-source/src/sphinx_jsgf2fsg/.libs/: sphinx_jsgf2fsg
CMU/sphinx-source/src/sphinx_lmtools/: Makefile  sphinx_lm_convert  sphinx_lm_eval
CMU/sphinx-source/src/sphinx_lmtools/.deps/: sphinx_lm_convert.Po  sphinx_lm_eval.Po
CMU/sphinx-source/src/sphinx_lmtools/.libs/: sphinx_lm_convert  sphinx_lm_eval
CMU/sphinx-source/swig/: Makefile
CMU/sphinx-source/swig/python/: Makefile  _sphinxbase.la  _sphinxbase_la-sphinxbase_wrap.lo  sphinxbase.py  sphinxbase_wrap.c
CMU/sphinx-source/swig/python/.deps/: _sphinxbase_la-sphinxbase_wrap.Plo
CMU/sphinx-source/swig/python/.libs/: _sphinxbase.lai  _sphinxbase.so.0.0.0  _sphinxbase.so.0.0.0T
CMU/sphinx-source/test/: Makefile
CMU/sphinx-source/test/regression/: Makefile  testfuncs.sh
CMU/sphinx-source/test/unit/: Makefile  testfuncs.sh
CMU/sphinx-source/test/unit/test_alloc/: Makefile
CMU/sphinx-source/test/unit/test_bitvec/: Makefile
CMU/sphinx-source/test/unit/test_case/: Makefile
CMU/sphinx-source/test/unit/test_cmdln/: Makefile
CMU/sphinx-source/test/unit/test_fe/: Makefile
CMU/sphinx-source/test/unit/test_feat/: Makefile
CMU/sphinx-source/test/unit/test_fsg/: Makefile
CMU/sphinx-source/test/unit/test_hash/: Makefile
CMU/sphinx-source/test/unit/test_lineiter/: Makefile
CMU/sphinx-source/test/unit/test_logmath/: Makefile
CMU/sphinx-source/test/unit/test_matrix/: Makefile
CMU/sphinx-source/test/unit/test_ngram/: Makefile
CMU/sphinx-source/test/unit/test_string/: Makefile
PEPPER/: bakery_service.top  closings.top  introductions.top  simplecontrol.top
data/: pepper1.dic  pepper1.lm  pepper2.lm  pepper3.lm  pepper4.dic
dialogsystem/: CMakeLists.txt  filespepper.txt  installer.sh  launcher.sh  package.xml  readme
dialogsystem/CMU/cnodes/: Makefile.am  configure.ac  continuous.c  continuous.cpp  continuous.c~
dialogsystem/NAOqi/: readme.txt  suturo16-0.0.0.pkg  suturo16.0.0.0.crg
dialogsystem/PEPPER1/: bakery_service.top  bakery_service.top~  closings.top  identification.top~  introductions.top  simplecontrol.top  simplecontrol.top~
dialogsystem/PEPPER2/: identification.top  identification.top~  simplecontrol.top  simplecontrol.top~
dialogsystem/data/: pepper1.dic  pepper1.lm  pepper12.dic  pepper12.lm  pepper2.dic  pepper2.lm  pepper3.dic  pepper3.lm  pepper4.dic  pepper4.lm  pepper5.dic  pepper5.lm
dialogsystem/emptyBehavior/: emptyBehavior.pml  manifest.xml
dialogsystem/launch/: dialog.launch  dialog.launch~  dialog.xml~  pepper12.corpus
dialogsystem/model/en-us-adapt/: feat.params~  transition_matrices
dialogsystem/nodes/: dialogCoreServerManager.py  dialogCoreServerManager.py~  dialogManager.py  dialogManager.py~  faceAnalyzer.py  faceAnalyzer.py~  nao_speech.py  nao_speech.py~  netparamupdater.py  netparamupdater.py~  rosCamera.py  rosCamera.py~  rpc_client.py  rpc_client.py~  rpc_server.py  rpc_server.py~  speechRecognizer.py  speechRecognizer.py~  sphinx_asr.py  sphinx_asr.py~  test.py~  utility.py
dialogsystem/scripts/: utility.py
dialogsystem_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dialogsystem_msgs/action/: DialogVisionAction.action  DialogVisionAction.action~
dialogsystem_msgs/msg/: DialogVisionMsg.msg  DialogVisionMsg.msg~
dialogsystem_msgs/srv/: DialogVisionService.srv  DialogVisionService.srv~
launch/: dialog.launch  pepper.corpus  pepper12.corpus
model/: mllr_matrix
model/en-us-adapt/: mixture_weights  sendump
nodes/: dialogCoreServerManager.py  dialogCoreServerManager.py~  dialogManager.py  gstreamer_sphinx.py  nao_speech.py  rpc_server.py  speechRecognizer.py  sphinx_asr.py  utility.py
(+49 files in other folders)
