<?xml version="1.0"?>
<package>
  <name>dialogsystem</name>
  <version>0.0.0</version>
  <description>dialog system for pepper robot</description>

  <maintainer email="fkenghag@uni-bremen.de">Franklin Kenfack Kenghagho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>sys</run_depend>
  <run_depend>roslib</run_depend>
  <!-- git https://github.com/ros-naoqi/naoqi_bridge_msgs.git --> 
  <run_depend>naoqi_bridge_msgs</run_depend>
  <!-- package naoqi(nao driver) is downloadable from Aldebaran website -->
  <!-- under the name pynaoqi-python2.7-2.1.4.13-linux64 -->
  <run_depend>naoqi</run_depend>
  <run_depend>SimpleXMLRPCServer</run_depend>
  <run_depend>xmlrpclib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>socket</run_depend>
  <run_depend>fcntl</run_depend>
  <run_depend>struct</run_depend>
  <run_depend>time</run_depend>
  <run_depend>subprocess</run_depend>
  <!-- For integration of ChatScript:git https://github.com/bwilcox-1234/ChatScript -->
 

  
</package>
