<?xml version="1.0"?>
<package format="2">
  <name>dialogsystem</name>
  <version>1.5.0</version>
  <description>dialog system for pepper robot: combines CV(computer vision) and NLP(Natural Language Processing) for more semantic dialog</description>
  <maintainer email="fkenghag@uni-bremen.de">Franklin Kenfack Kenghagho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  
  <exec_depend>dialogsystem_msgs</exec_depend>
  <!-- opencv 3.0.0 -->
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-paramiko</exec_depend>
  <exec_depend>python-imaging</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <!-- git https://github.com/ros-naoqi/naoqi_bridge_msgs.git --> 
  <exec_depend>naoqi_bridge_msgs</exec_depend>
  <!-- package naoqi(nao driver) is downloadable from Aldebaran website -->
  <!-- under the name pynaoqi-python2.7-2.1.4.13-linux64 -->
  <exec_depend>naoqi</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <!-- For integration of ChatScript:git https://github.com/bwilcox-1234/ChatScript -->
 

  
</package>
